--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Specifies intentionally untracked files to ignore when using Git
 # http://git-scm.com/docs/gitignore
 
-sftp-config.json
-
 # lte
 *.DS_Store
 *.log
@@ -16,3 +14,5 @@ ad.js
 TODO
 test.html
 sftp-config.json
+
+backend/**
